# tinyurl-mcp-server

./: .env  pyproject.toml
tinyurl_mcp_server/: __init__.py  server.py
