[build-system]
requires = "hatchling"
build-backend = "hatchling.build"

[project]
name = "tinyurl-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "requests",
]

[project.scripts]
tinyurl-mcp-server = "tinyurl_mcp_server:main"
