[project]
name = "tinyurl-mcp-server"
version = "0.1.0"
description = "TinyURL MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tinyurl-mcp-server = "tinyurl_mcp_server:main"
